--- a/index.html
+++ b/index.html
@@ -47,14 +47,14 @@
                 </div>
 
                 <div class="banner__img">
-                    <img src="./img/dummy.png" alt="">
+                    <img src="./img/burger.png" alt="">
                 </div>
                 
             </div>
         </div>
     </section>
 
-    <section class="product">
+    <section class="product py--6">
         <div class="container">
             <div class="block__header">
                 <span>Featured Product</span>
@@ -63,10 +63,10 @@
 
             <div class="product__cards">
                 <div class="product__item">
-                    <img src="./img/dummy.png" alt="">
+                    <img src="./img/salad.png" alt="">
                     <div class="item__info">
                         <h3>Green Salad</h3>
-                        <i class="fas fa-heart"></i>
+                        <i class="fa-regular fa-heart"></i>
                     </div>
                     <div class="item__info">
                         <div class="item__price">
@@ -78,13 +78,13 @@
                             <h4><i class="fas fa-star"></i> 432</h4>
                         </div>
                     </div>
-                    <a href="#" class="btn btn--primary">Add to Cart</a>
+                    <a href="#" class="btn btn--outline">Add to Cart</a>
                 </div>
                 <div class="product__item">
-                    <img src="./img/dummy.png" alt="">
+                    <img src="./img/salad.png" alt="">
                     <div class="item__info">
                         <h3>Green Salad</h3>
-                        <i class="fas fa-heart"></i>
+                        <i class="fa-regular fa-heart"></i>
                     </div>
                     <div class="item__info">
                         <div class="item__price">
@@ -96,13 +96,13 @@
                             <h4><i class="fas fa-star"></i> 432</h4>
                         </div>
                     </div>
-                    <a href="#" class="btn btn--primary">Add to Cart</a>
+                    <a href="#" class="btn btn--outline">Add to Cart</a>
                 </div>
                 <div class="product__item">
-                    <img src="./img/dummy.png" alt="">
+                    <img src="./img/salad.png" alt="">
                     <div class="item__info">
                         <h3>Green Salad</h3>
-                        <i class="fas fa-heart"></i>
+                        <i class="fa-regular fa-heart"></i>
                     </div>
                     <div class="item__info">
                         <div class="item__price">
@@ -114,13 +114,13 @@
                             <h4><i class="fas fa-star"></i> 432</h4>
                         </div>
                     </div>
-                    <a href="#" class="btn btn--primary">Add to Cart</a>
+                    <a href="#" class="btn btn--outline">Add to Cart</a>
                 </div>
                 <div class="product__item">
-                    <img src="./img/dummy.png" alt="">
+                    <img src="./img/salad.png" alt="">
                     <div class="item__info">
                         <h3>Green Salad</h3>
-                        <i class="fas fa-heart"></i>
+                        <i class="fa-regular fa-heart"></i>
                     </div>
                     <div class="item__info">
                         <div class="item__price">
@@ -132,7 +132,186 @@
                             <h4><i class="fas fa-star"></i> 432</h4>
                         </div>
                     </div>
-                    <a href="#" class="btn btn--primary">Add to Cart</a>
+                    <a href="#" class="btn btn--outline">Add to Cart</a>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section class="categories py--6">
+        <div class="container">
+            <div class="block__header">
+                <span>Top Categories</span>
+                <h2>Explore our top <span>Menu</span></h2>
+            </div>
+
+            <div class="category__tab">
+                <ul>
+                    <li class="active" ><a href="#" >Burger</a></li>
+                    <li><a href="#">Chicken</a></li>
+                    <li><a href="#">Salads</a></li>
+                    <li><a href="#">Cold Drinks</a></li>
+                    <li><a href="#">Tea</a></li>
+                </ul>
+            </div>
+
+            <div class="product__cards">
+                <div class="product__item reverse">
+                    <img src="./img/burger.png" alt="">
+                    <div class="item__info">
+                        <h3>Green Salad</h3>
+                        <i class="fa-regular fa-heart"></i>
+                    </div>
+                    <div class="item__info">
+                        <div class="item__price">
+                            <small>Price</small>
+                            <h4>$10.00</h4>
+                        </div>
+                        <div class="item__review">
+                            <small>Review</small>
+                            <h4><i class="fas fa-star"></i> 432</h4>
+                        </div>
+                    </div>
+                    <a href="#" class="btn btn--outline">Add to Cart</a>
+                </div>
+                <div class="product__item reverse">
+                    <img src="./img/burger.png" alt="">
+                    <div class="item__info">
+                        <h3>Green Salad</h3>
+                        <i class="fa-regular fa-heart"></i>
+                    </div>
+                    <div class="item__info">
+                        <div class="item__price">
+                            <small>Price</small>
+                            <h4>$10.00</h4>
+                        </div>
+                        <div class="item__review">
+                            <small>Review</small>
+                            <h4><i class="fas fa-star"></i> 432</h4>
+                        </div>
+                    </div>
+                    <a href="#" class="btn btn--outline">Add to Cart</a>
+                </div>
+                <div class="product__item reverse">
+                    <img src="./img/burger.png" alt="">
+                    <div class="item__info">
+                        <h3>Green Salad</h3>
+                        <i class="fa-regular fa-heart"></i>
+                    </div>
+                    <div class="item__info">
+                        <div class="item__price">
+                            <small>Price</small>
+                            <h4>$10.00</h4>
+                        </div>
+                        <div class="item__review">
+                            <small>Review</small>
+                            <h4><i class="fas fa-star"></i> 432</h4>
+                        </div>
+                    </div>
+                    <a href="#" class="btn btn--outline">Add to Cart</a>
+                </div>
+                <div class="product__item reverse">
+                    <img src="./img/burger.png" alt="">
+                    <div class="item__info">
+                        <h3>Green Salad</h3>
+                        <i class="fa-regular fa-heart"></i>
+                    </div>
+                    <div class="item__info">
+                        <div class="item__price">
+                            <small>Price</small>
+                            <h4>$10.00</h4>
+                        </div>
+                        <div class="item__review">
+                            <small>Review</small>
+                            <h4><i class="fas fa-star"></i> 432</h4>
+                        </div>
+                    </div>
+                    <a href="#" class="btn btn--outline">Add to Cart</a>
+                </div>
+                <div class="product__item reverse">
+                    <img src="./img/burger.png" alt="">
+                    <div class="item__info">
+                        <h3>Green Salad</h3>
+                        <i class="fa-regular fa-heart"></i>
+                    </div>
+                    <div class="item__info">
+                        <div class="item__price">
+                            <small>Price</small>
+                            <h4>$10.00</h4>
+                        </div>
+                        <div class="item__review">
+                            <small>Review</small>
+                            <h4><i class="fas fa-star"></i> 432</h4>
+                        </div>
+                    </div>
+                    <a href="#" class="btn btn--outline">Add to Cart</a>
+                </div>
+                <div class="product__item reverse">
+                    <img src="./img/burger.png" alt="">
+                    <div class="item__info">
+                        <h3>Green Salad</h3>
+                        <i class="fa-regular fa-heart"></i>
+                    </div>
+                    <div class="item__info">
+                        <div class="item__price">
+                            <small>Price</small>
+                            <h4>$10.00</h4>
+                        </div>
+                        <div class="item__review">
+                            <small>Review</small>
+                            <h4><i class="fas fa-star"></i> 432</h4>
+                        </div>
+                    </div>
+                    <a href="#" class="btn btn--outline">Add to Cart</a>
+                </div>
+                <div class="product__item reverse">
+                    <img src="./img/burger.png" alt="">
+                    <div class="item__info">
+                        <h3>Green Salad</h3>
+                        <i class="fa-regular fa-heart"></i>
+                    </div>
+                    <div class="item__info">
+                        <div class="item__price">
+                            <small>Price</small>
+                            <h4>$10.00</h4>
+                        </div>
+                        <div class="item__review">
+                            <small>Review</small>
+                            <h4><i class="fas fa-star"></i> 432</h4>
+                        </div>
+                    </div>
+                    <a href="#" class="btn btn--outline">Add to Cart</a>
+                </div>
+                <div class="product__item reverse">
+                    <img src="./img/burger.png" alt="">
+                    <div class="item__info">
+                        <h3>Green Salad</h3>
+                        <i class="fa-regular fa-heart"></i>
+                    </div>
+                    <div class="item__info">
+                        <div class="item__price">
+                            <small>Price</small>
+                            <h4>$10.00</h4>
+                        </div>
+                        <div class="item__review">
+                            <small>Review</small>
+                            <h4><i class="fas fa-star"></i> 432</h4>
+                        </div>
+                    </div>
+                    <a href="#" class="btn btn--outline">Add to Cart</a>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section class="booking">
+        <div class="container">
+            <div class="booking__content">
+                <div class="inner">
+                    <small>Table Booking</small>
+                    <h2>Reserve Your Table</h2>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatem fuga corporis illo illum, eligendi libero reprehenderit iusto! Tempora, quas tempore.</p>
+                    <a href="#" class="btn btn--dark">Book Now</a>
                 </div>
             </div>
         </div>
