--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Food Factory</title>
-    <link rel="stylesheet" href="./scss/main.css">
+    <link rel="stylesheet" href="./dist/main.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css">
 </head>
 <body>
@@ -312,6 +312,102 @@
                     <h2>Reserve Your Table</h2>
                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatem fuga corporis illo illum, eligendi libero reprehenderit iusto! Tempora, quas tempore.</p>
                     <a href="#" class="btn btn--dark">Book Now</a>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section class="services">
+        <div class="container">
+            <div class="block__header">
+                <span>Our Services</span>
+                <h2>How We <span>Work</span></h2>
+            </div>
+
+            <div class="services__cards">
+                <div class="services__item">
+                    <i class="fa-solid fa-clipboard-check"></i>
+                    <h4>Easy To Order</h4>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores maxime quae molestias doloribus, corrupti impedit.</p>
+                </div>
+                <div class="services__item">
+                    <i class="fa-solid fa-clipboard-check"></i>
+                    <h4>Pick & Eat</h4>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores maxime quae molestias doloribus, corrupti impedit.</p>
+                </div>
+                <div class="services__item">
+                    <i class="fa-solid fa-clipboard-check"></i>
+                    <h4>Make Payment</h4>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores maxime quae molestias doloribus, corrupti impedit.</p>
+                </div>
+                <div class="services__item">
+                    <i class="fa-solid fa-clipboard-check"></i>
+                    <h4>Fastest Delivery</h4>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores maxime quae molestias doloribus, corrupti impedit.</p>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section class="testimonials">
+        <div class="container">
+            <div class="block__header">
+                <span>Testimonials</span>
+                <h2>What People Say <span>About</span></h2>
+            </div>
+
+            <div class="testi__card">
+                <div class="testi__cards">
+                    <img src="./img/dummy.png" alt="">
+                    <div class="testi__items">
+                        <div class="testi__name">
+                            <h4>Paul Yamon</h4>
+                            <small>Owner</small>
+                            <div class="stars">
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                            </div>
+                        </div>
+                        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Saepe, labore!</p>
+                    </div>
+                </div>
+                
+                <div class="testi__cards">
+                    <img src="./img/dummy.png" alt="">
+                    <div class="testi__items">
+                        <div class="testi__name">
+                            <h4>Paul Yamon</h4>
+                            <small>Owner</small>
+                            <div class="stars">
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                            </div>
+                        </div>
+                        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Saepe, labore!</p>
+                    </div>
+                </div>
+                <div class="testi__cards">
+                    <img src="./img/dummy.png" alt="">
+                    <div class="testi__items">
+                        <div class="testi__name">
+                            <h4>Paul Yamon</h4>
+                            <small>Owner</small>
+                            <div class="stars">
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                            </div>
+                        </div>
+                        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Saepe, labore!</p>
+                    </div>
                 </div>
             </div>
         </div>
