--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                 </div>
 
                 <div class="banner__img">
-                    <img src="./img/burger.png" alt="">
+                    <img src="./img/man.jpg" alt="">
                 </div>
                 
             </div>
